--- a/notes.html
+++ b/notes.html
@@ -375,10 +375,23 @@
                   </section>
                   <section>
                     <h4>Electrodynamics (Fall 2020)</h4>
+                    <p>Prof. Zhao-Feng Kang</p>
                     <ul>
                       <li>
                         <a href="docs/notes/[电动力学]期末偷分宝典.pdf"
                           >Review Notes on Electrodynamics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+
+                  <section>
+                    <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
+                    <p>Prof. Qi Song</p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[高等量子力学]课堂笔记.pdf"
+                          >Study Note on Advanced Quantum Mechanics</a
                         >
                       </li>
                     </ul>
@@ -414,42 +427,64 @@
                     </ul>
                   </section>
                   <section>
-                    <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
+                    <h4>
+                      Thermodynamics and Statistical Physics (Spring 2021)
+                    </h4>
+                    <p>
+                      This course, taught by Prof. Shun Wang, was quite
+                      challenging. It was conducted entirely in English,
+                      including the coursework and exams. Each week, we were
+                      required to read research papers, answer related
+                      questions, and at the end of the term, we wrote a small
+                      essay. Additionally, I worked on a small project focused
+                      on the Ising Model. My study notes are primarily based on
+                      the textbook by David Tong.
+                    </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[高等量子力学]课堂笔记.pdf"
-                          >Study Note on Advanced Quantum Mechanics</a
+                        <a href="docs/notes/note-on-statistical-physics.pdf"
+                          >Study Notes on Thermodynamics and Statistical
+                          Physics</a
                         >
                       </li>
                     </ul>
                   </section>
-                  <ul>
-                    <li>
-                      Thermodynamics and Statistical Physics (Spring 2021) [<a
-                        href="docs/notes/note-on-statistical-physics.pdf"
-                        >Note</a
-                      >]
-                    </li>
-                    <li>
-                      Solid State Physics (Spring 2021) [<a
-                        href="docs/notes/[固体物理]期末复习笔记.pdf"
-                        >Review</a
-                      >]
-                    </li>
-                    <li>
-                      Quantum Optics (Fall 2021) [<a
-                        href="docs/notes/[量子光学]学习笔记.pdf"
-                        >Note</a
-                      >] [<a href="docs/notes/[量子光学]复习笔记.pdf">Review</a
-                      >]
-                    </li>
-                    <li>
-                      Introduction to Plasma Physics (Fall 2021) [<a
-                        href="docs/notes/[等离子体导论]课堂笔记.pdf"
-                        >Review</a
-                      >]
-                    </li>
-                  </ul>
+                  <section>
+                    <h4>Solid State Physics (Spring 2021)</h4>
+                    <p>Prof. Liu-Song Yuan</p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[固体物理]期末复习笔记.pdf"
+                          >Review Notes on Solid State Physics</a
+                        >]
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Quantum Optics (Fall 2021)</h4>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[量子光学]学习笔记.pdf"
+                          >Study Notes on Quantum Optics</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[量子光学]复习笔记.pdf"
+                          >Review Notes on Quantum Optics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Introduction to Plasma Physics (Fall 2021)</h4>
+                    <ul>
+                      <li>
+                        [<a href="docs/notes/[等离子体导论]课堂笔记.pdf"
+                          >Review Notes on Introduction to Plasma Physics</a
+                        >]
+                      </li>
+                    </ul>
+                  </section>
                 </section>
                 <hr />
                 <section id="pku">
@@ -458,49 +493,51 @@
                       <a href="#pku" class="scrolly">Peking University</a>
                     </h3>
                   </header>
-
-                  <h4>Quantum Mechanics II (Summer 2020)</h4>
-                  <p>
-                    These are my lecture notes from the Quantum Mechanics II
-                    course taught by Prof. Zhixin Qian during the 2020 Summer
-                    School at Peking University.
-                  </p>
-                  <ul>
-                    <li>
-                      <a href="docs/notes/Ch1_Phase in QM.pdf"
-                        >Chapter 1: Phase in quantum mechanics</a
-                      >
-                    </li>
-                    <li>
-                      <a href="docs/notes/Ch2_Path Integral Formalism of QM.pdf"
-                        >Chapter 2: Path integral formalism of quantum
-                        mechanics</a
-                      >
-                    </li>
-                    <li>
-                      <a href="docs/notes/Ch3_The WKB Approximation.pdf"
-                        >Chapter 3: The WKB approximation</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
-                        >Chapter 4: Rotation and vibration of molecules</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
-                        >Chapter 5: Variation principle</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="docs/notes/Ch6_Introduction to Many-body Theory.pdf"
-                        >Chapter 6: Introduction to many-body theory</a
-                      >
-                    </li>
-                  </ul>
+                  <section>
+                    <h4>Quantum Mechanics II (Summer 2020)</h4>
+                    <p>
+                      These are my lecture notes from the Quantum Mechanics II
+                      course taught by Prof. Zhixin Qian during the 2020 Summer
+                      School at Peking University.
+                    </p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/Ch1_Phase in QM.pdf"
+                          >Chapter 1: Phase in quantum mechanics</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="docs/notes/Ch2_Path Integral Formalism of QM.pdf"
+                          >Chapter 2: Path integral formalism of quantum
+                          mechanics</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/Ch3_The WKB Approximation.pdf"
+                          >Chapter 3: The WKB approximation</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
+                          >Chapter 4: Rotation and vibration of molecules</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
+                          >Chapter 5: Variation principle</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="docs/notes/Ch6_Introduction to Many-body Theory.pdf"
+                          >Chapter 6: Introduction to many-body theory</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
                 </section>
               </article>
             </div>
