--- a/notes.html
+++ b/notes.html
@@ -159,10 +159,10 @@
                     <h4>Advanced Classical Mechanics (Fall 2023)</h4>
                     <ul>
                       <li>
-                        [<a
+                        <a
                           href="docs/notes/notes-on-advanced-classical-physics.pdf"
                           >Study Note on Advanced Classical Mechanics</a
-                        >]
+                        >
                       </li>
                     </ul>
                   </section>
@@ -204,13 +204,14 @@
                     </ul>
                   </section>
                 </section>
+
                 <hr />
+
                 <section id="hust">
                   <header>
                     <h3>
                       <a href="#hust" class="scrolly">
-                        Huazhong University of Science and Technology
-                        (2018-2022)</a
+                        Huazhong University of Science and Technology</a
                       >
                     </h3>
                   </header>
@@ -384,10 +385,9 @@
                       </li>
                     </ul>
                   </section>
-
                   <section>
                     <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
-                    <p>Prof. Qi Song</p>
+                    <p>Prof. Yong Hu</p>
                     <ul>
                       <li>
                         <a href="docs/notes/[高等量子力学]课堂笔记.pdf"
@@ -398,6 +398,7 @@
                   </section>
                   <section>
                     <h4>Digital Electronics (Fall 2020)</h4>
+                    <p>Prof. Qi Song</p>
                     <ul>
                       <li>
                         <a href="docs/notes/[数字电子技术]笔记_Part1.pdf"
@@ -462,6 +463,7 @@
                   </section>
                   <section>
                     <h4>Quantum Optics (Fall 2021)</h4>
+                    <p>Prof. Jia-Hua Li</p>
                     <ul>
                       <li>
                         <a href="docs/notes/[量子光学]学习笔记.pdf"
@@ -477,6 +479,7 @@
                   </section>
                   <section>
                     <h4>Introduction to Plasma Physics (Fall 2021)</h4>
+                    <p>Prof. He-Lin Wei</p>
                     <ul>
                       <li>
                         [<a href="docs/notes/[等离子体导论]课堂笔记.pdf"
