--- a/notes.html
+++ b/notes.html
@@ -124,7 +124,8 @@
                     <ul>
                       <li>
                         <a href="docs/notes/notes-on-quantum-information.pdf"
-                          >Study Notes on Quantum Information</a
+                          ><strong>Study</strong> Notes on Quantum
+                          Information</a
                         >
                       </li>
                     </ul>
@@ -134,7 +135,7 @@
                     <ul>
                       <li>
                         <a href="docs/notes/notes-on-quantum-optics.pdf"
-                          >Study Notes on Quantum Optics</a
+                          ><strong>Study</strong> Notes on Quantum Optics</a
                         >
                       </li>
                     </ul>
@@ -145,13 +146,14 @@
                       <li>
                         <a
                           href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
-                          >Study Notes on Mathematical Methods for Physicists</a
+                          ><strong>Study</strong> Notes on Mathematical Methods
+                          for Physicists</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/revision-for-2024-mmp-exam.pdf"
-                          >Review Notes on Mathematical Methods for
-                          Physicists</a
+                          ><strong>Review</strong> Notes on Mathematical Methods
+                          for Physicists</a
                         >
                       </li>
                     </ul>
@@ -162,7 +164,8 @@
                       <li>
                         <a
                           href="docs/notes/notes-on-advanced-classical-physics.pdf"
-                          >Study Note on Advanced Classical Mechanics</a
+                          ><strong>Study</strong> Note on Advanced Classical
+                          Mechanics</a
                         >
                       </li>
                     </ul>
@@ -173,7 +176,8 @@
                       <li>
                         <a
                           href="docs/notes/notes-on-quantum-theory-of-matter.pdf"
-                          >Study Notes on Quantum Theory of Matter</a
+                          ><strong>Study</strong> Notes on Quantum Theory of
+                          Matter</a
                         >
                       </li>
                     </ul>
@@ -194,12 +198,13 @@
                       <li>
                         <a
                           href="docs/notes/notes-on-laser-device-technology.pdf"
-                          >Study Note on Laser Device Technology</a
+                          ><strong>Study</strong> Note on Laser Device
+                          Technology</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/notes-on-nonlinear-optics.pdf"
-                          >Study Notes on Nonlinear Optics</a
+                          ><strong>Study</strong> Notes on Nonlinear Optics</a
                         >
                       </li>
                     </ul>
@@ -366,12 +371,12 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[量子力学]学习笔记.pdf"
-                          >Study Notes on Quantum Mechanics</a
+                          ><strong>Study</strong> Notes on Quantum Mechanics</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[量子力学]期末偷分宝典.pdf"
-                          >Review Notes on Quantum Mechanics</a
+                          ><strong>Review</strong> Notes on Quantum Mechanics</a
                         >
                       </li>
                     </ul>
@@ -382,7 +387,7 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[电动力学]期末偷分宝典.pdf"
-                          >Review Notes on Electrodynamics</a
+                          ><strong>Review</strong> Notes on Electrodynamics</a
                         >
                       </li>
                     </ul>
@@ -393,7 +398,8 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[高等量子力学]课堂笔记.pdf"
-                          >Study Note on Advanced Quantum Mechanics</a
+                          ><strong>Study</strong> Note on Advanced Quantum
+                          Mechanics</a
                         >
                       </li>
                     </ul>
@@ -404,27 +410,32 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[数字电子技术]笔记_Part1.pdf"
-                          >Study Notes on Digital Electronics - Part 1</a
+                          ><strong>Study</strong> Notes on Digital Electronics -
+                          Part 1</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[数字电子技术]笔记_Part2.pdf"
-                          >Study Notes on Digital Electronics - Part 2</a
+                          ><strong>Study</strong> Notes on Digital Electronics -
+                          Part 2</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[数字电子技术]笔记_Part3.pdf"
-                          >Study Notes on Digital Electronics - Part 3</a
+                          ><strong>Study</strong> Notes on Digital Electronics -
+                          Part 3</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[数字电子技术]笔记_Part4.pdf"
-                          >Study Notes on Digital Electronics - Part 4</a
+                          ><strong>Study</strong> Notes on Digital Electronics -
+                          Part 4</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[数字电子技术]笔记_Part5.pdf"
-                          >Study Notes on Digital Electronics - Part 5</a
+                          ><strong>Study</strong> Notes on Digital Electronics -
+                          Part 5</a
                         >
                       </li>
                     </ul>
@@ -446,8 +457,8 @@
                     <ul>
                       <li>
                         <a href="docs/notes/note-on-statistical-physics.pdf"
-                          >Study Notes on Thermodynamics and Statistical
-                          Physics</a
+                          ><strong>Study</strong> Notes on Thermodynamics and
+                          Statistical Physics</a
                         >
                       </li>
                     </ul>
@@ -469,12 +480,12 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[量子光学]学习笔记.pdf"
-                          >Study Notes on Quantum Optics</a
+                          ><strong>Study</strong> Notes on Quantum Optics</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[量子光学]复习笔记.pdf"
-                          >Review Notes on Quantum Optics</a
+                          ><strong>Review</strong> Notes on Quantum Optics</a
                         >
                       </li>
                     </ul>
@@ -484,9 +495,10 @@
                     <p>Prof. He-Lin Wei</p>
                     <ul>
                       <li>
-                        [<a href="docs/notes/[等离子体导论]课堂笔记.pdf"
-                          >Review Notes on Introduction to Plasma Physics</a
-                        >]
+                        <a href="docs/notes/[等离子体导论]课堂笔记.pdf"
+                          ><strong>Review</strong> Notes on Introduction to
+                          Plasma Physics</a
+                        >
                       </li>
                     </ul>
                   </section>
@@ -508,37 +520,42 @@
                     <ul>
                       <li>
                         <a href="docs/notes/Ch1_Phase in QM.pdf"
-                          >Chapter 1: Phase in quantum mechanics</a
+                          ><strong>Study</strong> Notes - Chapter 1: Phase in
+                          quantum mechanics</a
                         >
                       </li>
                       <li>
                         <a
                           href="docs/notes/Ch2_Path Integral Formalism of QM.pdf"
-                          >Chapter 2: Path integral formalism of quantum
-                          mechanics</a
+                          ><strong>Study</strong> Notes - Chapter 2: Path
+                          integral formalism of quantum mechanics</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/Ch3_The WKB Approximation.pdf"
-                          >Chapter 3: The WKB approximation</a
+                          ><strong>Study</strong> Notes - Chapter 3: The WKB
+                          approximation</a
                         >
                       </li>
                       <li>
                         <a
                           href="docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
-                          >Chapter 4: Rotation and vibration of molecules</a
+                          ><strong>Study</strong> Notes - Chapter 4: Rotation
+                          and vibration of molecules</a
                         >
                       </li>
                       <li>
                         <a
                           href="docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
-                          >Chapter 5: Variation principle</a
+                          ><strong>Study</strong> Notes - Chapter 5: Variation
+                          principle</a
                         >
                       </li>
                       <li>
                         <a
                           href="docs/notes/Ch6_Introduction to Many-body Theory.pdf"
-                          >Chapter 6: Introduction to many-body theory</a
+                          ><strong>Study</strong> Notes - Chapter 6:
+                          Introduction to many-body theory</a
                         >
                       </li>
                     </ul>
