--- a/notes.html
+++ b/notes.html
@@ -469,7 +469,8 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[固体物理]期末复习笔记.pdf"
-                          >Review Notes on Solid State Physics</a
+                          ><strong>Review</strong> Notes on Solid State
+                          Physics</a
                         >]
                       </li>
                     </ul>
