--- a/notes.html
+++ b/notes.html
@@ -100,6 +100,7 @@
                     summaries, and self-study observations.
                   </p>
                 </header>
+                <hr />
                 <section id="imperial">
                   <header>
                     <h3>
@@ -115,7 +116,7 @@
                   </header>
 
                   <section>
-                    <h4>Quantum Information (Fall 2023)</h4>
+                    <h4><a>Quantum Information (Fall 2023)</a></h4>
                     <p>
                       This course was taught by Prof. Myungshik Kim. My notes
                       were based on his lecture notes and the textbook by
@@ -131,7 +132,7 @@
                     </ul>
                   </section>
                   <section>
-                    <h4>Quantum Optics (Fall 2023)</h4>
+                    <h4><a>Quantum Optics (Fall 2023)</a></h4>
                     <ul>
                       <li>
                         <a href="docs/notes/notes-on-quantum-optics.pdf"
@@ -141,7 +142,9 @@
                     </ul>
                   </section>
                   <section>
-                    <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
+                    <h4>
+                      <a>Mathematical Methods for Physicists (Fall 2023)</a>
+                    </h4>
                     <ul>
                       <li>
                         <a
@@ -159,7 +162,7 @@
                     </ul>
                   </section>
                   <section>
-                    <h4>Advanced Classical Mechanics (Fall 2023)</h4>
+                    <h4><a>Advanced Classical Mechanics (Fall 2023)</a></h4>
                     <ul>
                       <li>
                         <a
@@ -171,7 +174,7 @@
                     </ul>
                   </section>
                   <section>
-                    <h4>Quantum Theory of Matter (Spring 2024)</h4>
+                    <h4><a>Quantum Theory of Matter (Spring 2024)</a></h4>
                     <ul>
                       <li>
                         <a
@@ -183,7 +186,7 @@
                     </ul>
                   </section>
                   <section>
-                    <h4>Laser Technology (Spring 2024)</h4>
+                    <h4><a>Laser Technology (Spring 2024)</a></h4>
                     <p>
                       This course covers two main topics:
                       <strong>Laser Device Technology</strong> and
