--- a/index.html
+++ b/index.html
@@ -238,6 +238,19 @@
                       ></div>
                     </div>
                   </div>
+
+                  <div class="col-4">
+                    <strong>COMSOL</strong>
+                  </div>
+                  <div class="col-8">
+                    <div class="progress-container">
+                      <div
+                        class="progress-bar"
+                        id="progress-bar"
+                        style="width: 50%"
+                      ></div>
+                    </div>
+                  </div>
                 </div>
               </section>
               <hr />
