--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -149,6 +149,7 @@
                   <h3>Hardware</h3>
                 </header>
                 <h4>Optical tweezers</h4>
+                <h4>Architecture</h4>
               </section>
               <hr />
               <section id="compilation">
