--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -143,8 +143,8 @@
                   </li>
                   <li>
                     <strong>C. Huang</strong> and J. Wang, "Ion trap chip
-                    parameter determining method and device, electronic
-                    equipment and medium,"
+                    parameter correction method and device, electronic equipment
+                    and medium,"
                     <i
                       >Chinese Patent
                       <a href="https://patents.google.com/patent/CN117454997/en"
