--- a/publications.html
+++ b/publications.html
@@ -125,7 +125,7 @@
                 </li>
                 <li>
                   <strong>C. Huang</strong> and J. Wang, "Ion trap chip
-                  parameter determining method and device, electronic equipment
+                  parameter correction method and device, electronic equipment
                   and medium,"
                   <i
                     >Chinese Patent
