--- a/index.html
+++ b/index.html
@@ -348,8 +348,10 @@
                       Under the guidance of Dr. John Michniewicz, I focus on
                       investigating
                       <strong
-                        >charge noise in semiconductor spin qubits for quantum
-                        computing</strong
+                        ><i
+                          >charge noise in semiconductor spin qubits for quantum
+                          computing</i
+                        ></strong
                       >. My work includes <strong>wire bonding</strong> quantum
                       devices for characterization and studying the
                       <strong>charge transport</strong> properties of
@@ -372,7 +374,9 @@
                       <i>May 2024 - Present</i><br />
                       As a remote intern at BAQIS, I focus on
                       <strong
-                        >Rydberg atom quantum computing and compilation</strong
+                        ><i
+                          >quantum compilation with neutral atom computers</i
+                        ></strong
                       >, a rapidly advancing area of quantum research. In this
                       work, I introduce <strong>ZAP</strong>, a zoned
                       architecture that
@@ -399,18 +403,19 @@
                       <i>Mar. 2023 - Sep. 2023</i><br />
                       Working under Dr. Jingbo Wang, I developed an
                       <strong
-                        >automated calibration framework for trapped-ion quantum
-                        computers</strong
+                        ><i
+                          >automated calibration framework for trapped-ion
+                          quantum computers</i
+                        ></strong
                       >, enabling precise determination of
-                      <strong
-                        >phonon frequencies and Lamb-Dicke parameters</strong
-                      >. This Python-based tool reduced manual intervention,
-                      improved parameter accuracy, and resulted in
-                      <strong>three patents</strong>. The rigorous industrial
-                      training at Baidu honed my <strong>coding skills</strong>,
-                      emphasizing code quality, documentation, and
-                      maintainability, ensuring future usability of the
-                      developed tools.
+                      <strong>phonon frequencies</strong> and
+                      <strong>Lamb-Dicke parameters</strong>. This Python-based
+                      tool reduced manual intervention, improved parameter
+                      accuracy, and resulted in <strong>three patents</strong>.
+                      The rigorous industrial training at Baidu honed my
+                      <strong>coding skills</strong>, emphasizing code quality,
+                      documentation, and maintainability, ensuring future
+                      usability of the developed tools.
                     </li>
                     <br />
                     <li>
@@ -423,8 +428,10 @@
                       <i>Apr. 2019 - Dec. 2022</i><br />
                       For my graduation project,
                       <strong
-                        >Nanoscale Detection of Ions Using a Spin Quantum
-                        Sensor</strong
+                        ><i
+                          >Nanoscale Detection of Ions Using a Spin Quantum
+                          Sensor</i
+                        ></strong
                       >, I focused on NV center quantum sensing. Combining
                       theoretical calculations with simulations, I derived the
                       <strong
@@ -451,13 +458,15 @@
                         MITACS Globalink Research Internship </a
                       >, I contributed to the project
                       <strong
-                        >New Plasma Processing Techniques for Advanced
-                        Materials</strong
+                        ><i
+                          >New Plasma Processing Techniques for Advanced
+                          Materials</i
+                        ></strong
                       >
                       under the guidance of Prof. Michael Bradley. Due to
                       COVID-19 travel restrictions, this work was conducted
                       remotely, where I focused on coding tasks related to
-                      <strong>plasma motion</strong> while gaining insights into
+                      plasma motion while gaining insights into
                       <strong>plasma processing techniques</strong>. (<a
                         href="docs/MITACS.pdf"
                         >View Certificate</a
@@ -474,15 +483,15 @@
                       <i>Jun. 2021 - Sep. 2021</i><br />
                       During my summer research internship under Prof. Hao
                       Zheng, I conducted an
-                      <strong>STM study on topological insulators</strong>. My
-                      work included <strong>fabricating STM tips</strong> using
+                      <strong><i>STM study on topological insulators</i></strong
+                      >. My work included
+                      <strong>fabricating STM tips</strong> using
                       electrochemical methods, performing
                       <strong>Raman spectroscopy</strong>, learning the working
                       theory of
-                      <strong
-                        >Molecular Beam Epitaxy (MBE) and Scanning Tunneling
-                        Microscopy (STM)</strong
-                      >. Additionally, I contributed to assembling a
+                      <strong>Molecular Beam Epitaxy (MBE)</strong> and
+                      <strong>Scanning Tunneling Microscopy (STM)</strong>.
+                      Additionally, I contributed to assembling a
                       <strong>dilution refrigerator</strong>, gaining valuable
                       hands-on experience in advanced experimental techniques.
                     </li>
