--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </li>
                 <li>
                   <a href="charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge Noise in Semiconductor Spin Qubits</a
+                    >Charge noise in semiconductor spin qubits</a
                   >
                 </li>
               </ul>
@@ -375,7 +375,8 @@
                       As a remote intern at BAQIS, I focus on
                       <strong
                         ><i
-                          >quantum compilation with neutral atom computers</i
+                          >quantum compilation with neutral atom quantum
+                          computers</i
                         ></strong
                       >, a rapidly advancing area of quantum research. In this
                       work, I introduce <strong>ZAP</strong>, a zoned
