--- a/research.html
+++ b/research.html
@@ -48,7 +48,7 @@
                 </li>
                 <li>
                   <a href="charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge Noise in Semiconductor Spin Qubits</a
+                    >Charge noise in semiconductor spin qubits</a
                   >
                 </li>
               </ul>
@@ -92,7 +92,7 @@
                 <p></p>
                 <h4>
                   <a href="charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge Noise in Semiconductor Spin Qubits</a
+                    >Charge noise in semiconductor spin qubits</a
                   >
                 </h4>
               </section>
