--- a/notes.html
+++ b/notes.html
@@ -48,7 +48,7 @@
                 </li>
                 <li>
                   <a href="charge-noise-in-semiconductor-spin-qubits.html"
-                    >Charge Noise in Semiconductor Spin Qubits</a
+                    >Charge noise in semiconductor spin qubits</a
                   >
                 </li>
               </ul>
