--- a/index.html
+++ b/index.html
@@ -375,8 +375,7 @@
                       As a remote intern at BAQIS, I focus on
                       <strong
                         ><i
-                          >quantum compilation with neutral atom quantum
-                          computers</i
+                          >compilation for neutral atom quantum computers</i
                         ></strong
                       >, a rapidly advancing area of quantum research. In this
                       work, I introduce <strong>ZAP</strong>, a zoned
