--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   of Chinese civilization.
                 </p>
                 <p>
-                  I am always on the lookout for new opportunities to expand my
+                  I am always on the lookout for opportunities to expand my
                   knowledge and skills. Whether through collaborative projects,
                   internships, or further academic research, I'm eager to
                   connect with like-minded individuals and organizations. If
