--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -111,7 +111,7 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <header>
-                  <h2>Calibration of trapped-ion systems</h2>
+                  <h2>Calibration of Trapped-Ion Systems</h2>
                 </header>
                 <p>
                   This project was conducted at the Institute for Quantum
