--- a/charge-noise-in-semiconductor-spin-qubits.html
+++ b/charge-noise-in-semiconductor-spin-qubits.html
@@ -109,7 +109,10 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <header>
-                  <h2>Charge Noise in Semiconductor Spin Qubits</h2>
+                  <h2>
+                    Charge Noise in Semiconductor Spin Qubits for Quantum
+                    Computing
+                  </h2>
                   <p></p>
                 </header>
               </article>
