--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -109,7 +109,7 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <header>
-                  <h2>Compilation for neutral atom quantum computers</h2>
+                  <h2>Compilation for Neutral Atom Quantum Computers</h2>
                 </header>
                 <p>
                   This project was conducted within the
